API ChangeLog

12-Jul-2014	Костя Маслюк <kostyamaslyuk@gmail.com>
	Versification mapping implementation and example at
		examples/tasks/parallelbibles.cpp

27-Apr-2014	Troy A. Griffitts <scribe@crosswire.org>
	Added C# bindings contributed by Daniel Hughes <trampster@gmail.com>

17-Mar-2014	Chris Little <chrislit@crosswire.org>
	Added zVerse4, zText4, & zCom4 classes to support compressed text/
		commentary modules with entry sizes > 64k

3-Mar-2014	Chris Little <chrislit@crosswire.org>
	Added support for bzip2 (Burrows-Wheeler) module compression via libbz2
	Added support for xz (LZMA2) module compression via liblzma

30-Dec-2013 	Peter von Kaehne <refdoc@crosswire.org>
	Added LaTeX output filters


* Release 1.7.0 *

5-Oct-2013	Troy A. Griffitts <scribe@crosswire.org>
	Add a new Option filter, OSISReferenceLinks, based on work submitted
		by "John Austin", which allows removal of references based on
		a type/subtype combination. .conf usage is:
		GlobalOptionFilter=OSISReferenceLinks|Option Name|Option Tip
			|OSIS Reference Type|OSIS Reference SubType
			|Default Value
		e.g,
		GlobalOptionFilter=OSISReferenceLinks|Reference Material Links
			|Hide or show links in the Biblical text to study helps
			|x-glossary||On

14-Aug-2013	Troy A. Griffitts <scribe@crosswire.org>
	Added new version macros in swversion.h and removed
		config.h as a packaged and included entity

2-Aug-2013	Chris Little <chrislit@crosswire.org>
	Added basic bibliography method to SWModule
		(mostly from refdoc's patch)

16-July-2013	Troy A. Griffitts <scribe@crosswire.org>
	Many classes have had class and method names normalized, including:
		VerseMgr renamed to VersificationMgr
		SWKey
		ListKey
		SWModule

13-July-2013	Chris Little <chrislit@crosswire.org>
	Added LXX & Orthodox versifications

13-July-2013	Troy A. Griffitts <scribe@crosswire.org>
	InstallMgr FTP now has a 45 second timeout

11-July-2013	Troy A. Griffitts <scribe@crosswire.org>